Added a way back to the main page

--- a/pages/about.html
+++ b/pages/about.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+    <link rel = "stylesheet" href = "/assests/css/tips.css">
+    <link rel = "stylesheet" href = "assests/css/general.css">
+
+
   <style>
+
+
     body{
       background-color:rgb(241, 245, 239);
     }
@@ -61,10 +67,12 @@
     }
   </style>
 
-  <head> </head>
-
   <body>
-    <h1> ← About Us</h1>
+    <header> 
+      <a href = "../index.html">  <img src = "/assests/icons/back.svg" class = "back-icon"> <a> 
+      <h1> About us </h1>
+    </header>
+    
 
     <div class="flex">
       <button onclick="toggleText1()" class="collapsible"> Our Mission</button>
