fixed arrow image

--- a/pages/about.html
+++ b/pages/about.html
@@ -69,7 +69,7 @@
 
   <body>
     <header> 
-      <a href = "../index.html">  <img src = "/assests/icons/back.svg" class = "back-icon"> <a> 
+      <a href = "../index.html">  <img src = "../assests/icons/back.svg" class = "back-icon"> <a> 
       <h1> About us </h1>
     </header>
     
