--- a/pages/tips.html
+++ b/pages/tips.html
@@ -14,7 +14,7 @@
 
         <header>
 
-            <a href = "../index.html">  <img src = "/assests/icons/back.svg" class = "back-icon"> <a> 
+            <a href = "../index.html">  <img src = "../assests/icons/back.svg" class = "back-icon"> <a> 
 
             <h1> Trash Track: Tips</h1>
 
