made the text cleaner

--- a/pages/about.html
+++ b/pages/about.html
@@ -19,17 +19,12 @@
       gap: 1px;
     }
 
-    .container{
-      right: 40px;
-      left: 40px;
-    }
-
     .collapsible{ 
       border-radius: 10px;
       width: 90%;
       max-width: 1200px;
       font-family: Arial, Helvetica, sans-serif;
-      font-size: 20px;
+      font-size: 50px;
       color: white;
       font-weight: bold;
       border:none;
@@ -78,11 +73,10 @@
       <button onclick="toggleText1()" class="collapsible"> Our Mission</button>
       <div id="hiddenText1" class="slide-down-text"> 
           <p>
-          TrashTrack is a smart-waste disposal tool designated to help users properly manage their trash. <br> 
-          By selecting a waste type such as, plastic, food scraps, napkins, users are instantly guided to <br>
-          the nearest trash bin accordingly to the user's waste. This tool helps finding trash bins convenient <br>
-          and helps promote sustainable eco-friendly practices by ensuring items are sorted properly and in the <br>
-          right place. TrashTrack's encourages recycling, and keeps the community clean. 
+          TrashTrack is a smart waste-disposal tool designed to help users manage their trash efficiently. By selecting <br>
+          a waste type—such as plastic, food scraps, or napkins—users are instantly guided to the nearest appropriate <br>
+          trash bin. TrashTrack makes finding bins convenient while promoting sustainable, eco-friendly practices by <br>
+          ensuring items are properly sorted. It encourages recycling and helps keep communities clean. <br>
           </p>
         </div>
 
