--- a/pages/maps.html
+++ b/pages/maps.html
@@ -12,6 +12,13 @@
   <body>
     <div id="map"></div>
 
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAvbivBkudlLf28kHVhcz7nB2MOHa9MS14&callback=initMap" async defer></script>
+    <gmp-map center="43.78899692601981,-79.19093841009143" zoom="18" map-id="DEMO_MAP_ID" style="height: 400px">
+      <gmp-advanced-marker position="43.78899692601981,-79.19093841009143" title="Sam Ibrahim (IA) Building"></gmp-advanced-marker>
+    </gmp-map>
+
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAvbivBkudlLf28kHVhcz7nB2MOHa9MS14&libraries=maps,marker&v=beta"
+      defer
+    ></script>
   </body>
 </html>
