--- a/pages/maps.html
+++ b/pages/maps.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
 
     <link rel="stylesheet" href="../assests/css/maps.css" />
-    <script src="../assests/js/maps.js"></script>
+    <script src="../assests/js/rework_maps.js"></script>
   </head>
 
   <body>
