Changed UI of website

--- a/index.html
+++ b/index.html
@@ -8,14 +8,20 @@
         <link rel = "stylesheet" href = "assests/css/index.css">
         <link rel = "stylesheet" href = "assests/css/general.css">
 
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Questrial&display=swap" rel="stylesheet">
+
     </head>
 
 
     <body>
         <header> 
-
-            
-            <h1> Trash Track</h1>
+            <div class = "name-container"> 
+                <img class = "logo-icon" src = "assests/icons/logo.png">
+                <h1> Trash Track</h1>
+            </div>
             
             <div class = "tooltips">
                 <a href = "pages/tips.html"> <img src = "assests/icons/tips.svg" class = "tips-icon"></a>
@@ -26,10 +32,10 @@
         </header>
 
         <main>
-            <a href = "pages/maps.html"> <button class = "maps-navigate"> I want to dispose my Trash!</button> </a>
+            <a href = "pages/maps.html"> <button class = "maps-navigate"> Dispose my trash!</button> </a>
 
         </main>
 
-    </body>
+    </body> 
 
 </html>
