--- a/pages/about.html
+++ b/pages/about.html
@@ -1,66 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-    <link rel = "stylesheet" href = "/assests/css/tips.css">
+    <link rel = "stylesheet" href = "/assests/css/about.css">
     <link rel = "stylesheet" href = "assests/css/general.css">
 
 
-  <style>
-
-
-    body{
-      background-color:rgb(241, 245, 239);
-    }
-
-    .flex{
-      display: flex;
-      justify-content: center;
-      align-items: flex-start;
-      flex-direction: column;
-      gap: 1px;
-    }
-
-    .collapsible{ 
-      border-radius: 10px;
-      width: 90%;
-      max-width: 1200px;
-      font-family: Arial, Helvetica, sans-serif;
-      font-size: 50px;
-      color: white;
-      font-weight: bold;
-      border:none;
-      margin-top: 20px;
-      margin: 0 auto;
-      text-align: center;
-      cursor: pointer;
-      background-color: black;
-      padding-top: 10px;
-
-    }
-
-    .collapsible:hover{
-      background-color: black;
-    }
-
-    .slide-down-text{
-      border-radius: 10px;
-      overflow: hidden;
-      width: 90%;
-      color: white;
-      max-width: 1200px;
-      max-height: 0;
-      margin: 0 auto;
-      font-family: Arial, Helvetica, sans-serif;
-      text-align: center;
-      transition: max-height 0.4s ease-out, padding 0.3s;
-      background-color:black;
-      padding: 0px 20px;
-    }
-
-    .slide-down-text.open{
-      max-height: 500px;
-      padding: 10px 0px;
-    }
-  </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Questrial&display=swap" rel="stylesheet">
 
   <body>
     <header> 
@@ -74,15 +20,15 @@
       <div id="hiddenText1" class="slide-down-text"> 
           <p>
           TrashTrack is a smart waste-disposal tool designed to help users manage their trash efficiently. By selecting <br>
-          a waste type—such as plastic, food scraps, or napkins—users are instantly guided to the nearest appropriate <br>
-          trash bin. TrashTrack makes finding bins convenient while promoting sustainable, eco-friendly practices by <br>
-          ensuring items are properly sorted. It encourages recycling and helps keep communities clean. <br>
+          a waste type—such as plastic, food scraps, or napkins—users are instantly guided to the nearest appropriate 
+          trash bin. TrashTrack makes finding bins convenient while promoting sustainable, eco-friendly practices by 
+          ensuring items are properly sorted. It encourages recycling and helps keep communities clean.
           </p>
         </div>
 
       <button onclick="toggleText2()" class="collapsible"> Development Team </button>
         <div id="hiddenText2" class="slide-down-text"> 
-          Keerthanan Kantaruban - UFT Scarborough<br>
+          Keerthanan Kantaruban - UofT Scarborough<br>
           Jose Urbina - York University <br>
           Jian Heng Fang Gao - York University<br>
         </div>
