change in index and rework maps

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </header>
 
     <main>
-      <a href="pages/maps.html"> <button class="maps-navigate" onclick="routeToNearestBin()">Dispose my trash!</button> </a>
+      <a href="pages/maps.html?nearest=1"> <button class="maps-navigate">Dispose my trash!</button> </a>
     </main>
   </body>
 </html>
