--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
         const iframe = document.createElement("iframe");
         iframe.src = "pages/maps.html?nearest=1";
         iframe.title = "TrashTrack Map";
-        iframe.style.width = "100%";
-        iframe.style.height = "70vh";
+        iframe.style.width = "900px";
+        iframe.style.height = "500px";
         iframe.style.border = "0";
         iframe.loading = "lazy";
 
@@ -51,6 +51,5 @@
         container.scrollIntoView({ behavior: "smooth", block: "start" });
       });
     </script>
-    // ...existing code...
   </body>
 </html>
