iframe formatting design

--- a/index.html
+++ b/index.html
@@ -42,9 +42,11 @@
         const iframe = document.createElement("iframe");
         iframe.src = "pages/maps.html?nearest=1";
         iframe.title = "TrashTrack Map";
-        iframe.style.width = "900px";
-        iframe.style.height = "500px";
+        iframe.style.width = "1000px";
+        iframe.style.height = "1000px";
+        iframe.style.paddingTop = "16px";
         iframe.style.border = "0";
+        iframe.style.borderRadius = "25px";
         iframe.loading = "lazy";
 
         container.appendChild(iframe);
