--- a/pages/chat-window.html
+++ b/pages/chat-window.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
     <link rel = "stylesheet" href = "/assests/css/chat-window.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Questrial&display=swap" rel="stylesheet">
+    
     <head> </head>
 
     <body>
         <section class="chat-window"> 
-            <button class="close"> close </button>
             <div class="chat"> 
                 <div class="model">
                   <p> Hello, how may I be of assistance?</p>      
