added the ai icon to the message

--- a/pages/chat-window.html
+++ b/pages/chat-window.html
@@ -5,13 +5,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Questrial&display=swap" rel="stylesheet">
-    
+
     <head> </head>
 
     <body>
         <section class="chat-window"> 
             <div class="chat"> 
-                <div class="model">
+                <div class="model" src="">
                   <p> Hello, how may I be of assistance?</p>      
                 </div>
             </div>
